<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chakt</string>
    <string name="menu_settings">Preferences</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_activity_main">Chackt</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseWait">Please Wait.</string>
    <string name="loggingin">Trying to log in.</string>
    <string name="traktKey">ed56114bc8efdcd86414ee055027b3d465ac45a8</string>
    <string name="loginInvalid">Invalid Username/Password.</string>
    <string name="emptyAuth">Username/Password can\'t be empty.</string>
    <string name="checkin">Checkin</string>
    <string name="title_activity_login">Sign in to trakt.tv</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_username">This Username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="refresh">Refresh</string>
    <string name="watchlist">Watchlist</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_single_movie">Movie</string>
    <string name="title_activity_single_show">Show</string>
    <string name="title_activity_single_episode">Episode</string>
    <string name="year">Year</string>
    <string name="runtime">Runtime</string>
    <string name="released">Released</string>
    <string name="genres">Genres</string>
    <string name="times_played">Times played</string>
    <string name="headerimage">Headerimage</string>
    <string name="minutes">minutes</string>
    <string name="notplayed">Not seen yet.</string>
    <string name="times">times</string>
    <string name="rating">Rating</string>
    <string name="votes">Votes</string>
	<string name="description">Description</string>
	<string name="show">Show</string>
    <string name="seasons">Seasons</string>
    <string name="airs">Airs</string>
    <string name="noair">Doesn\'t air</string>
    <string name="movieAdd">Movie successfully added</string>
    <string name="movieRemove">Movie successfully removed</string>
    <string name="showAdd">Show successfully added</string>
    <string name="showRemove">Show successfully removed</string>
    <string name="episodeAdd">Episode successfully added</string>
    <string name="episodeRemove">Episode successfully removed</string>
    <string name="movieCheckin">Successfully checked in to movie</string>
    <string name="showCheckin">Successfully checked in to show</string>
    <string name="episodeCheckin">Successfully checked in to episode</string>
    <string name="nonetwork">There is no network connection.</string>
    <string name="authfailed">There was a problem with authentification. Maybe you changed your password?</string>
    <string name="correctPassword">Correct Password</string>
    <string name="authentification">Authentification</string>
    <string name="sorting">Sorting</string>
    <string name="showprogress">Show Progress</string>
    <string name="behaviour">Behaviour</string>
    <string name="confirmationdialog">Confirmation Dialog</string>
    <string name="confirmon">Checkins have to be confirmed through a dialog</string>
    <string name="confirmoff">Checkins don\'t have to be confirmed through a dialog</string>
    <string name="tryCheckin">checking in</string>
    <string name="tryWatchlistAdd">adding to watchlist</string>
    <string name="tryWatchlistRemove">removing from watchlist</string>
    <string name="unhandledError">An error occurred</string>
    <string name="show_specials_label">Specials are listed</string>
    <string name="hide_specials">Specials are hidden</string>
    <string name="show_specials">Display specials in Show View</string>
    <string name="season">Season</string>
    <string name="episodes">Episodes</string>
    <string name="markseen">mark as seen</string>
    <string name="hide_finished_shows_true">Finished shows are hidden from progress view</string>
    <string name="hide_finished_shows_false">Finished shows are shown in progress view</string>
    <string name="hide_finished_shows">Hide finished shows</string>
    <string name="show_posters">Show posters in lists</string>
</resources>
